...
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/small_padding"
    android:background="#9AB3F5">

    <LinearLayout
        android:id="@+id/layoutItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/small_padding"
        android:paddingTop="@dimen/big_padding"
        android:paddingBottom="@dimen/small_padding"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/itemTextView"
            style="@style/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailsTextView"
            style="@style/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:textSize="14sp" />
    </LinearLayout>
...
