...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/big_padding"
                tools:listitem="@layout/recyclerview_item" />

            <Button
                android:id="@+id/emptyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:paddingHorizontal="@dimen/small_padding"
                android:layout_marginTop="50dp"
                android:text="@string/no_topics"
...
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_subject"
            app:srcCompat="@drawable/ic_baseline_add_24"/>

...
