<resources>
    <string name="app_name">StudyPlanner</string>

    <string name="add_subject">Add/Edit Subject</string>
    <string name="hint_subject">Subject</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Data was not saved.</string>
    <string name="all_subjects">All Subjects</string>

    <string name="study_partner">Study Partner</string>
    <string name="start_connection">Start bluetooth</string>
    <string name="stop_connection">Stop bluetooth</string>
    <string name="peers_title">no study partners online</string>
    <string name="exam_date">Exam date</string>
...
